# dotfiles

./: .vimrc  setup.sh
.config/hypr/: dynamic_wallpaper_cycle.sh  hyprland.conf  hyprpaper.conf  powermenu.sh  toggle-qalculate.sh  wallpaper_cycle.sh
.config/i3/: brightness.sh  config  volume.sh
.config/i3status/: config
.config/nvim/: init.lua
.config/nvim/boilerplates/: CMakeLists.txt  template.cpp  template.html
.config/nvim/lua/: boilerplate.lua  mappings.lua  plugins.lua  settings.lua
.config/nvim/plugin/: packer_compiled.lua
.config/nvim/scripts/: create_c_project.sh  create_c_project.zsh  create_cpp_project.zsh  create_qt_project.zsh
.config/picom/: picom.conf
.config/sway/: config
.config/sway/config.d/: 50-openSUSE.conf  bindings.conf  resize.conf  windows.conf
.config/sway/config.d/bindings/: applicationBindings.conf  mediaBindings.conf  windowBindings.conf  workspaceBindings.conf
.config/waybar/: config  gruvbox.css  style.css
.vim/: coc-settings.json
.vim/boilerplates/: template.pro
.vim/config/: boilerplate.vim  mappings.vim  plugins.vim  settings.vim
